--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
                           </table>
                           <h6>Add promo code</h6>
                           <input type="text" id="promo">
-                          <button id="apply-promo" class="bg-grey">Apply</button>
+                          <button id="apply-promo" class="bg-danger
+                          bg-gradient ">Apply</button>
                       </div>
                   </div>
                 </div>
